--- a/css/index.css
+++ b/css/index.css
@@ -4,11 +4,17 @@
       box-sizing: border-box;
       scroll-behavior: smooth;
     }
+    html,body{
+      width: 100%;
+      height: 100%;
+    }
     body {
       font-family: 'Poppins', sans-serif;
       background-color: #0e0e0e;
       color: white;
       line-height: 1.6;
+      height: 100%;
+      width: 100%;
     }
     nav {
       display: flex;
@@ -40,6 +46,7 @@
     }
     .hero {
       height: 80vh;
+      width: 100%;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -475,4 +482,4 @@
         width: 300px;
       }
       
-                       }
+    }
