--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
       box-sizing: border-box;
       scroll-behavior: smooth;
     }
-    html,body{
+    html body{
       width: 100%;
       height: 100%;
     }
@@ -16,29 +16,70 @@
       height: 100%;
       width: 100%;
     }
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px 40px;
-      background: #111;
-      position: relative;
-      position: fixed;
-      width: 100%;
-    }
-    nav ul {
-      display: flex;
-      gap: 20px;
-      list-style: none;
-    }
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-    nav ul li a:hover {
-      color: #00ffd5;
-    }
+    header {
+  background-color: #000;
+  padding: 10px 20px;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.nav-links {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+}
+
+.nav-links li a {
+  color: #fff;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.nav-links li a:hover {
+  color: #00f0ff;
+}
+
+.menu-toggle {
+  font-size: 28px;
+  color: #fff;
+  display: none;
+  cursor: pointer;
+}
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 10px;
+    background-color: #111;
+  }
+
+  .nav-links li {
+    text-align: center;
+    padding: 10px 0;
+  }
+
+  .nav-links.show {
+    display: flex;
+  }
+
+/*   .hero {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .hero-text h1 {
+    font-"size: 2.2rem;
+  } */
+}
     .logo{
       width: 60px;
       height: 60px;
@@ -462,12 +503,8 @@
     height: 540px;
   }
   65%{
-    width: 590px;
-    height: 590px;
-  }
-  70%{
-    width: 600px;
-    height: 600px;
+    width: 500px;
+    height: 500px;
   }
   100% {
     box-shadow: 0 0 10px #00f7ff;
@@ -482,4 +519,4 @@
         width: 300px;
       }
       
-    }
+      }
